[metadata]
name = dogpile.cache
home-page = https://dogpilecache.sqlalchemy.org
project_urls =
    Bug Tracker = https://github.com/sqlalchemy/dogpile.cache/issues
    Documentation = http://dogpilecache.sqlalchemy.org/
    Source Code = https://github.com/sqlalchemy/dogpile.cache
summary = A caching front-end based on the Dogpile lock.
description-file =
    README.rst
author = Mike Bayer
author-email = mike_mp@zzzcomputing.com
license = BSD
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords = caching

[files]
packages =
    dogpile

[extras]
devel=
    zimports
    black
    fixtures
    pbr
    tox
    bandit
tests=
    pytest
    pytest-cov
    mock
    Mako

[entry_points]
mako.cache =
    dogpile.cache = dogpile.cache.plugins.mako_cache:MakoPlugin

[egg_info]

[upload_docs]
upload-dir = docs/build/output/html

[wheel]
universal = 1

[upload]
sign = 1
identity = C4DAFEE1

[flake8]
enable-extensions = G
# E203 is due to https://github.com/PyCQA/pycodestyle/issues/373
ignore =
    A003,
    D,
    E203,E305,E711,E712,E721,E722,E741,
    N801,N802,N806,
    RST304,RST303,RST299,RST399,
    W503,W504
exclude = .venv,.git,.tox,dist,docs/*,*egg,build
import-order-style = google
application-import-names = dogpile,tests


[tool:pytest]
addopts= --tb native -v -r fxX  -p no:logging
python_files=tests/*test_*.py
filterwarnings =
    error
