[metadata]
name = dogpile.cache
version = attr: dogpile.__version__
description = A caching front-end based on the Dogpile lock.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = caching
url = https://github.com/sqlalchemy/dogpile.cache
author = Mike Bayer
author_email = mike_mp@zzzcomputing.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
project_urls =
    Documentation=https://dogpilecache.sqlalchemy.org
    Issue Tracker=https://github.com/sqlalchemy/dogpile.cache/

[options]
install_requires =
  decorator>=4.0.0
  stevedore>=3.0.0
zip_safe = False
packages = find:
python_requires = >=3.6
package_dir =
    =.

[options.exclude_package_data]
'' = tests*

[options.entry_points]
mako.cache =
    dogpile.cache = dogpile.cache.plugins.mako_cache:MakoPlugin

[egg_info]

[upload_docs]
upload-dir = docs/build/output/html


[upload]
sign = 1
identity = C4DAFEE1

[flake8]
enable-extensions = G
# E203 is due to https://github.com/PyCQA/pycodestyle/issues/373
ignore =
    A003,
    D,
    E203,E305,E711,E712,E721,E722,E741,
    N801,N802,N806,
    RST304,RST303,RST299,RST399,
    W503,W504
exclude = .venv,.git,.tox,dist,docs/*,*egg,build
import-order-style = google
application-import-names = dogpile,tests


[tool:pytest]
addopts= --tb native -v -r fxX  -p no:logging -p no:warnings
python_files=tests/*test_*.py
filterwarnings =
    error
